# yt-downloader

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml
src/: main.py
src/api/: dependencies.py
src/api/routes/v1/: endpoints.py
src/config/: settings.py
src/core/: logging_config.py
src/db/: database.py
src/services/: base.py  download_service.py  remove_vocal_service.py
